# grpc-bdt-server

./: .env  Cargo.toml  README.md  build.rs  gRPCb.in
client/: Cargo.toml
client/src/: main.rs
data/: db.db
proto/: bdt.proto  tt_config.proto
server/src/: main.rs
src/: main.rs
