[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.9.2"
tokio = { version = "1.28.0", features = ["macros", "rt-multi-thread"] }

[build-dependencies]
tonic-build = {version = "0.9.2", features = ["prost"]}
